--- a/arch/arm/boot/dts/qcom/dsi-panel-somc-suzu.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-somc-suzu.dtsi
@@ -36,6 +36,7 @@
 		somc,qpnp-lab-full-pull-down;
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
+		qcom,esd-check-enabled;
 		somc,mdss-dsi-master;
 	};
 
