--- a/arch/arm/boot/dts/qcom/msm8956-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-regulator.dtsi
@@ -501,7 +501,7 @@
 		interrupts = <0 19 0>;
 		regulator-name = "apc1_corner";
 		regulator-min-microvolt = <1>;
-		regulator-max-microvolt = <7>;
+		regulator-max-microvolt = <8>;
 
 		qcom,cpr-fuse-corners = <3>;
 		qcom,cpr-voltage-ceiling = <950000 1050000 1165000>;
@@ -515,6 +515,8 @@
 					 <RPM_SMD_REGULATOR_LEVEL_SVS>,
 					 <RPM_SMD_REGULATOR_LEVEL_SVS_PLUS>,
 					 <RPM_SMD_REGULATOR_LEVEL_NOM>,
+					 <RPM_SMD_REGULATOR_LEVEL_TURBO>,
+					 <RPM_SMD_REGULATOR_LEVEL_TURBO>,
 					 <RPM_SMD_REGULATOR_LEVEL_TURBO>,
 					 <RPM_SMD_REGULATOR_LEVEL_TURBO>,
 					 <RPM_SMD_REGULATOR_LEVEL_TURBO>;
@@ -557,7 +559,7 @@
 		qcom,cpr-init-voltage-ref = <950000 1050000 1165000>;
 		qcom,cpr-init-voltage-step = <10000>;
 
-		qcom,cpr-corner-map = <1 1 2 2 3 3 3>;
+		qcom,cpr-corner-map = <1 1 2 2 3 3 3 3 3>;
 		qcom,cpr-scaled-init-voltage-as-ceiling;
 		qcom,cpr-voltage-scaling-factor-max = <0 2000 2000>;
 		qcom,cpr-quot-adjust-scaling-factor-max = <0 1400 1400>;
@@ -568,7 +570,9 @@
 				<4  1382400000>,
 				<5  1612800000>,
 				<6  1747200000>,
-				<7  1804800000>;
+				<7  1804800000>,
+				<8  1958400000>,
+				<9  2016000000>;
 		qcom,cpr-speed-bin-max-corners =
 				<0 0 2 4 6>,
 				<1 0 2 4 7>;
@@ -585,7 +589,7 @@
 			<0    0  0>;
 		qcom,cpr-voltage-floor-override =
 			<(-1) (-1) 790000 790000 820000 850000
-			940000 990000 990000>;
+			940000 990000 990000 990000 990000>;
 		qcom,cpr-enable;
 	};
 
@@ -607,8 +611,8 @@
 		compatible = "qcom,cpr2-gfx-regulator";
 		reg = <0x98000 0x1000>, <0xa4000 0x1000>;
 		reg-names = "rbcpr", "efuse_addr";
-		clocks = <&clock_gcc clk_gcc_rbcpr_gfx_clk>,
-			<&clock_gcc clk_gcc_rbcpr_gfx_ahb_clk>;
+		clocks = <&clock_gcc GCC_RBCPR_GFX_CLK>,
+			<&clock_gcc GCC_RBCPR_GFX_AHB_CLK>;
 		clock-names = "core_clk", "iface_clk";
 		interrupts = <0 314 0>;
 
