--- a/arch/arm/boot/dts/qcom/msm-pm8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pm8950.dtsi
@@ -33,7 +33,12 @@
 			qcom,threshold-set = <0>;
 			qcom,temp_alarm-vadc = <&pm8950_vadc>;
 		};
-
+/*
+		pmi8998_misc: qcom,misc@900 {
+			compatible = "qcom,qpnp-misc";
+			reg = <0x900 0x100>;
+		};
+*/
 		qcom,power-on@800 {
 			compatible = "qcom,qpnp-power-on";
 			reg = <0x800 0x100>;
