--- a/arch/arm/boot/dts/qcom/msm8956-loire-kugo-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-loire-kugo-common.dtsi
@@ -20,11 +20,12 @@
 &soc {
 	/* I2C : BLSP8 */
 	i2c@7af8000 { /* BLSP2 QUP4 */
+/*
 		compatible = "qcom,i2c-msm-v2";
 		#address-cells = <1>;
 		#size-cells = <0>;
-		qcom,clk-freq-out = <355000>;
-		qcom,clk-freq-in = <19200000>;
+		//qcom,clk-freq-out = <355000>;
+		//qcom,clk-freq-in = <19200000>;
 
 		qcom,master-id = <84>;
 		reg-names = "qup_phys_addr";
@@ -32,12 +33,33 @@
 		interrupt-names = "qup_irq";
 		interrupts = <0 302 0>;
 		clock-names = "iface_clk", "core_clk";
-		clocks = <&clock_gcc clk_gcc_blsp2_ahb_clk>,
-			 <&clock_gcc clk_gcc_blsp2_qup4_i2c_apps_clk>;
+		clocks = <&clock_gcc GCC_BLSP2_AHB_CLK>,
+			 <&clock_gcc GCC_BLSP2_QUP4_I2C_APPS_CLK>;
+*/
+                compatible = "qcom,i2c-msm-v2";
+                #address-cells = <1>;
+                #size-cells = <0>;
+                reg-names = "qup_phys_addr";
+                reg = <0x7af8000 0x600>;
+                interrupt-names = "qup_irq";
+                interrupts = <0 302 0>;
+                qcom,clk-freq-out = <400000>;
+                qcom,clk-freq-in  = <19200000>;
+                clock-names = "iface_clk", "core_clk";
+                clocks = <&clock_gcc GCC_BLSP2_AHB_CLK>,
+                        <&clock_gcc GCC_BLSP2_QUP4_I2C_APPS_CLK>;
+                qcom,noise-rjct-scl = <0>;
+                qcom,noise-rjct-sda = <0>;
+                qcom,master-id = <84>;
+                dmas = <&dma_blsp2 10 64 0x20000020 0x20>,
+                        <&dma_blsp2 11 32 0x20000020 0x20>;
+                dma-names = "tx", "rx";
+
+
 		pinctrl-names = "i2c_active", "i2c_sleep";
 		pinctrl-0 = <&msm_gpio_18_act &msm_gpio_19_act>;
 		pinctrl-1 = <&msm_gpio_18_sus &msm_gpio_19_sus>;
-		status = "okay";
+
 		tcs3490@72 {
 			compatible = "ams,tcs3490";
 			reg = <0x72>;
