--- a/arch/arm/boot/dts/qcom/msm8956-mdss.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-mdss.dtsi
@@ -17,6 +17,8 @@
 			<0x1ab0000 0x3000>;
 		reg-names = "mdp_phys", "vbif_phys";
 		interrupts = <0 72 0>;
+		interrupt-controller;
+		#interrupt-cells = <1>;
 		vdd-supply = <&gdsc_mdss>;
 
 		/* Bus Scale Settings */
@@ -35,12 +37,20 @@
 		qcom,mdss-clk-factor = <105 100>;	/* 1.05 times */
 		qcom,max-bandwidth-low-kbps = <5700000>;
 		qcom,max-bandwidth-high-kbps = <5700000>;
+
+		/* Bandwidth limit settings */
+//		qcom,max-bw-settings = <1 6400000>, /* Default */
+//				       <2 6400000>; /* Camera */
+
 		qcom,max-bandwidth-per-pipe-kbps = <4 2100000>,	/* HFlip */
-						   <8 1800000>;	/* VFlip */
+						   <8 2800000>;	/* VFlip */
 
 		/* VBIF QoS remapper settings*/
 		qcom,mdss-vbif-qos-rt-setting = <2 2 2 2>;
 		qcom,mdss-vbif-qos-nrt-setting = <1 1 1 1>;
+		qcom,vbif-settings = <0x00ac 0x00008040>,
+				     <0x00d0 0x00002828>;
+
 		qcom,max-mixer-width = <2560>;
 		qcom,mdss-mdp-reg-offset = <0x00001000>;
 		qcom,max-clk-rate = <360000000>;
@@ -48,6 +58,8 @@
 		qcom,mdss-pipe-rgb-off = <0x00015000 0x00017000>;
 		qcom,mdss-pipe-dma-off = <0x00025000>;
 		qcom,mdss-pipe-cursor-off = <0x000450DC>;
+
+
 		qcom,mdss-pipe-vig-fetch-id = <1 9>;
 		qcom,mdss-pipe-rgb-fetch-id = <7 8>;
 		qcom,mdss-pipe-dma-fetch-id = <4>;
@@ -91,15 +103,17 @@
 		qcom,mdss-needs-iommu-bw-vote;
 		qcom,mdss-has-panic-ctrl;
 		qcom,mdss-has-pingpong-split;
+		qcom,mdss-has-separate-rotator;
+		qcom,mdss-has-source-split;
 		qcom,mdss-dsc-off = <0x00081000 0x00081400>;
 
-		clocks = <&clock_gcc clk_gcc_mdss_ahb_clk>,
-			 <&clock_gcc clk_gcc_mdss_axi_clk>,
-			 <&clock_gcc clk_mdp_clk_src>,
-			 <&clock_gcc_mdss clk_gcc_mdss_mdp_vote_clk>,
-			 <&clock_gcc clk_gcc_mdss_vsync_clk>,
-			 <&clock_gcc clk_gcc_mdp_tbu_clk>,
-			 <&clock_gcc clk_gcc_mdp_rt_tbu_clk>;
+		clocks = <&clock_gcc GCC_MDSS_AHB_CLK>,
+			 <&clock_gcc GCC_MDSS_AXI_CLK>,
+			 <&clock_gcc MDP_CLK_SRC>,
+			 <&clock_gcc GCC_MDSS_MDP_VOTE_CLK>,
+			 <&clock_gcc GCC_MDSS_VSYNC_CLK>,
+			 <&clock_gcc GCC_MDP_TBU_CLK>,
+			 <&clock_gcc GCC_MDP_RT_TBU_CLK>;
 		clock-names = "iface_clk", "bus_clk", "core_clk_src",
 				"core_clk", "vsync_clk", "tbu_clk",
 				"tbu_rt_clk";
@@ -159,8 +173,8 @@
 		smmu_mdp_unsec: qcom,smmu_mdp_unsec_cb {
 			compatible = "qcom,smmu_mdp_unsec";
 			iommus = <&apps_smmu 22>;
-			clocks = <&clock_gcc clk_gcc_smmu_cfg_clk>,
-				 <&clock_gcc clk_gcc_apss_tcu_clk>;
+			clocks = <&clock_gcc GCC_SMMU_CFG_CLK>,
+				 <&clock_gcc GCC_APSS_TCU_CLK>;
 			clock-names = "gcc_smmu_cfg_clk",
 				      "gcc_apss_tcu_clk";
 		};
@@ -168,8 +182,8 @@
 		smmu_mdp_sec: qcom,smmu_mdp_sec_cb {
 			compatible = "qcom,smmu_mdp_sec";
 			iommus = <&apps_smmu 9>;
-			clocks = <&clock_gcc clk_gcc_smmu_cfg_clk>,
-				 <&clock_gcc clk_gcc_apss_tcu_clk>;
+			clocks = <&clock_gcc GCC_SMMU_CFG_CLK>,
+				 <&clock_gcc GCC_APSS_TCU_CLK>;
 			clock-names = "gcc_smmu_cfg_clk",
 				      "gcc_apss_tcu_clk";
 		};
@@ -222,13 +236,14 @@
 		      0x1a96b80 0x1a96b80 0x30
 		      0x193e000 0x193e000 0x30>;
 
-		clocks = <&clock_gcc_mdss clk_gcc_mdss_mdp_vote_clk>,
-			<&clock_gcc clk_gcc_mdss_ahb_clk>,
-			<&clock_gcc clk_gcc_mdss_axi_clk>,
-			<&clock_gcc_mdss clk_ext_byte0_clk_src>,
-			<&clock_gcc_mdss clk_ext_byte1_clk_src>,
-			<&clock_gcc_mdss clk_ext_pclk0_clk_src>,
-			<&clock_gcc_mdss clk_ext_pclk1_clk_src>;
+		clocks = <&clock_gcc GCC_MDSS_MDP_VOTE_CLK>,
+			<&clock_gcc GCC_MDSS_AHB_CLK>,
+			<&clock_gcc GCC_MDSS_AXI_CLK>,
+			<&mdss_dsi0_pll HPM_BYTE0_SRC_CLK>,
+			<&mdss_dsi1_pll HPM_BYTE1_SRC_CLK>,
+			<&mdss_dsi0_pll HPM_PIX0_SRC_CLK>,
+			<&mdss_dsi1_pll HPM_PIX1_SRC_CLK>;
+
 		clock-names = "mdp_core_clk", "iface_clk", "bus_clk",
 			"ext_byte0_clk", "ext_byte1_clk", "ext_pixel0_clk",
 			"ext_pixel1_clk";
@@ -298,14 +313,13 @@
 			lab-supply = <&lab_regulator>;
 			ibb-supply = <&ibb_regulator>;
 
-			clocks = <&clock_gcc_mdss clk_gcc_mdss_byte0_clk>,
-				<&clock_gcc_mdss clk_gcc_mdss_pclk0_clk>,
-				<&clock_gcc clk_gcc_mdss_esc0_clk>,
-				<&clock_gcc_mdss clk_byte0_clk_src>,
-				<&clock_gcc_mdss clk_pclk0_clk_src>;
+			clocks = <&clock_gcc_mdss GCC_MDSS_BYTE0_CLK>,
+				<&clock_gcc_mdss GCC_MDSS_PCLK0_CLK>,
+				<&clock_gcc GCC_MDSS_ESC0_CLK>,
+				<&clock_gcc_mdss GCC_MDSS_BYTE0_CLK_SRC>,
+				<&clock_gcc_mdss GCC_MDSS_PCLK0_CLK_SRC>;
 			clock-names = "byte_clk", "pixel_clk", "core_clk",
 				"byte_clk_rcg", "pixel_clk_rcg";
-
 			qcom,platform-strength-ctrl = [ff 06];
 			qcom,platform-bist-ctrl = [00 00 b1 ff 00 00];
 			qcom,platform-regulator-settings =
@@ -328,21 +342,25 @@
 			      <0x193e000 0x30>;
 			reg-names = "dsi_ctrl", "dsi_phy",
 			      "dsi_phy_regulator", "mmss_misc_phys";
-
+			status = "disabled";
 			qcom,mdss-mdp = <&mdss_mdp>;
 			vdd-supply = <&pm8950_l17>;
 			vddio-supply = <&pm8950_l6>;
 			lab-supply = <&lab_regulator>;
 			ibb-supply = <&ibb_regulator>;
 
-			clocks = <&clock_gcc_mdss clk_gcc_mdss_byte1_clk>,
-				<&clock_gcc_mdss clk_gcc_mdss_pclk1_clk>,
-				<&clock_gcc clk_gcc_mdss_esc1_clk>,
-				<&clock_gcc_mdss clk_byte1_clk_src>,
-				<&clock_gcc_mdss clk_pclk1_clk_src>;
+			clocks = <&clock_gcc_mdss GCC_MDSS_BYTE1_CLK>,
+				<&clock_gcc_mdss GCC_MDSS_PCLK1_CLK>,
+				<&clock_gcc GCC_MDSS_ESC1_CLK>,
+				<&clock_gcc_mdss GCC_MDSS_BYTE1_CLK_SRC>,
+				<&clock_gcc_mdss GCC_MDSS_PCLK1_CLK_SRC>,
+				<&mdss_dsi0_pll HPM_BYTE1_SRC_CLK>,
+				<&mdss_dsi0_pll HPM_PIX1_SRC_CLK>,
+				<&mdss_dsi0_pll HPM_BYTE1_MUX_CLK>;
 			clock-names = "byte_clk", "pixel_clk", "core_clk",
-				"byte_clk_rcg", "pixel_clk_rcg";
-
+				"byte_clk_rcg", "pixel_clk_rcg",
+				"pll_byte_clk_src", "pll_pixel_clk_src",
+				"pll_byte_clk_mux";
 			qcom,platform-strength-ctrl = [ff 06];
 			qcom,platform-bist-ctrl = [00 00 b1 ff 00 00];
 			qcom,platform-regulator-settings =
@@ -379,8 +397,8 @@
 		rot-vdd-supply = <&gdsc_mdss>;
 		qcom,supply-names = "rot-vdd";
 
-		clocks = <&clock_gcc clk_gcc_mdss_ahb_clk>,
-			<&clock_gcc_mdss clk_gcc_mdss_mdp_rotator_vote_clk>;
+		clocks = <&clock_gcc GCC_MDSS_AHB_CLK>,
+			<&clock_gcc GCC_MDSS_MDP_ROTATOR_VOTE_CLK>;
 		clock-names = "iface_clk", "rot_core_clk";
 
 
