--- a/arch/arm/boot/dts/qcom/msm8956-pm.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-pm.dtsi
@@ -291,7 +291,7 @@
 		    <0xb011008 0x4>;
 		reg-names = "vmpm", "ipc";
 		interrupts = <0 171 1>;
-		clocks = <&clock_gcc clk_xo_lpm_clk>;
+		clocks = <&clock_rpmcc CXO_LPM_CLK>;
 		clock-names = "xo";
 
 		qcom,ipc-bit-offset = <1>;
@@ -468,10 +468,10 @@
 			<56  35>;
 	};
 
-	qcom,cpu-sleep-status{
+/*	qcom,cpu-sleep-status{
 		compatible = "qcom,cpu-sleep-status";
 	};
-
+*/
 	qcom,rpm-log@29dc00 {
 		compatible = "qcom,rpm-log";
 		reg = <0x29dc00 0x4000>;
