--- a/arch/arm/boot/dts/qcom/msm8956-v1.1.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-v1.1.dtsi
@@ -39,7 +39,7 @@
 &soc {
 	/delete-node/ qcom,cpu-clock-8976@b016000;
 
-	clock_cpu: qcom,cpu-clock-8976@b016000 {
+	clock_cpu: cpu-clock-controller@b016000 {
 		#address-cells = <1>;
 		#size-cells = <1>;
 		compatible = "qcom,cpu-clock-8976";
@@ -51,11 +51,15 @@
 			<0xb111050  0x08>,
 			<0xb011050  0x08>,
 			<0xb1d1050  0x08>,
-			<0x00a412c  0x08>;
+			<0x00a412c  0x08>,
+			<0xb111200 0x100>,
+		        <0xb011200 0x100>,
+			<0xb1d4000 0x100>;
 		reg-names = "rcgwr-c0-base", "rcgwr-c1-base",
 			    "c0-pll", "c1-pll", "cci-pll",
 			    "c0-mux", "c1-mux", "cci-mux",
-			    "efuse";
+			    "efuse", "spm_c0_base",
+			    "spm_c1_base", "spm_cci_base";
 
 		/* RCGwR settings */
 		qcom,num-clusters = <2>;
@@ -90,10 +94,10 @@
 		vdd_a72-supply = <&apc1_vreg_corner>;
 		vdd_a53-supply = <&apc0_vreg_corner>;
 		vdd_cci-supply = <&apc0_vreg_corner>;
-		clocks = <&clock_gcc clk_xo_a_clk_src>,
-			 <&clock_gcc clk_gpll4_clk_src>,
-			 <&clock_gcc clk_gpll0_ao_clk_src>;
-		clock-names = "xo_a", "aux_clk_2", "aux_clk_3";
+		clocks = <&clock_rpmcc RPM_XO_A_CLK_SRC>,
+			 <&clock_gcc GPLL4_CLK_SRC>,
+			 <&clock_gcc GPLL0_AO_CLK_SRC>;
+		clock-names = "cxo_a", "aux_clk_2", "aux_clk_3";
 		qcom,speed0-bin-v0-c0 =
 			<          0 0>,
 			<  400000000 1>,
@@ -107,28 +111,100 @@
 		qcom,speed0-bin-v0-c1 =
 			<          0 0>,
 			<  400000000 1>,
-			<  883200000 2>,
+			<  940800000 2>,
 			< 1190400000 3>,
 			< 1382400000 4>,
 			< 1612800000 5>,
 			< 1747200000 6>,
-			< 1804800000 7>;
+			< 1804800000 7>,
+			< 1958400000 8>;
 		qcom,speed0-bin-v0-cci =
 			<          0 0>,
 			<  307200000 1>,
+			<  384000000 2>,
+			<  403200000 3>,
+			<  441600000 4>,
+			<  556800000 5>,
+			<  614400000 6>;
+		qcom,speed2-bin-v0-c0 =
+			<          0 0>,
+			<  400000000 1>,
+			<  691200000 2>,
+			<  806400000 3>,
+			< 1017600000 4>,
+			< 1190400000 5>,
+			< 1305600000 6>,
+			< 1382400000 7>,
+			< 1401600000 8>;
+		qcom,speed2-bin-v0-c1 =
+			<          0 0>,
+			<  400000000 1>,
+			<  940800000 2>,
+			< 1190400000 3>,
+			< 1382400000 4>,
+			< 1612800000 5>,
+			< 1747200000 6>,
+			< 1804800000 7>,
+			< 1958400000 8>;
+		qcom,speed2-bin-v0-cci =
+			<          0 0>,
+			<  307200000 1>,
+			<  384000000 2>,
 			<  403200000 3>,
 			<  441600000 4>,
 			<  556800000 5>,
 			<  614400000 6>;
 		#clock-cells = <1>;
 		ranges;
-		qcom,spm@0 {
-			compatible = "qcom,cpu-spm-8976";
-			reg = <0x0b111200 0x100>,
-			      <0x0b011200 0x100>,
-			      <0x0b1d4000 0x100>;
-			reg-names = "spm_c0_base", "spm_c1_base",
-				     "spm_cci_base";
+	};
+
+	qcom,msm-cpufreq {
+		compatible = "qcom,msm-cpufreq";
+		clock-names = "l2_clk", "cpu0_clk", "cpu4_clk";
+		clocks = <&clock_cpu P_CCI_CLK>,
+			 <&clock_cpu P_A53_CLK>,
+			 <&clock_cpu P_A72_CLK>;
+		qcom,governor-per-policy;
+		qcom,cpufreq-table-0 =
+			<  400000 >,
+			<  691200 >,
+			<  806400 >,
+			< 1017600 >,
+			< 1190400 >,
+			< 1305600 >,
+			< 1382400 >,
+			< 1401600 >;
+		qcom,cpufreq-table-4 =
+			<  400000 >,
+			<  940800 >,
+			<  998400 >,
+			< 1056000 >,
+			< 1113600 >,
+			< 1190400 >,
+			< 1248000 >,
+			< 1305600 >,
+			< 1382400 >,
+			< 1612800 >,
+			< 1747200 >,
+			< 1804800 >,
+			< 1958400 >;
+	};
+
+	devfreq-cpufreq {
+		cci-cpufreq {
+			target-dev = <&cci_cache>;
+			cpu-to-dev-map-0 =
+				<  691200  307200 >,
+				<  806400  403200 >,
+				< 1017600  441600 >,
+				< 1190400  556800 >,
+				< 1401600  614400 >;
+			cpu-to-dev-map-4 =
+				<  940800 307200 >,
+				< 1190400 400000 >,
+				< 1382400 441600 >,
+				< 1612800 556800 >,
+				< 1804800 614400 >;
 		};
 	};
 
@@ -139,7 +215,7 @@
 		/delete-property/ qcom,cpr-quotient-adjustment;
 
 		qcom,cpr-speed-bin-max-corners =
-				<0 0 2 4 8>;
+				<2 0 2 4 8>;
 	};
 
 	apc1_vreg_corner: regulator@b118000 {
@@ -148,7 +224,7 @@
 		/delete-property/ qcom,cpr-quotient-adjustment;
 
 		qcom,cpr-speed-bin-max-corners =
-				<0 0 2 4 7>;
+				<2 0 2 4 8>;
 	};
 
 	gfx_vreg_corner: regulator@98000 {
