--- a/drivers/clk/qcom/mdss/Makefile
+++ b/drivers/clk/qcom/mdss/Makefile
@@ -4,3 +4,4 @@ obj-$(CONFIG_QCOM_MDSS_PLL) += mdss-dsi-pll-14nm.o
 obj-$(CONFIG_QCOM_MDSS_PLL) += mdss-dsi-pll-14nm-util.o
 obj-$(CONFIG_QCOM_MDSS_PLL) += mdss-dp-pll-14nm.o
 obj-$(CONFIG_QCOM_MDSS_PLL) += mdss-dp-pll-14nm-util.o
+obj-$(CONFIG_QCOM_MDSS_PLL) += mdss-dsi-pll-28hpm.o
